editors/tree-sitter-teyru/test/corpus/literals.txt
==================
numbers of every kind
==================

class C {
  void f() {
    int a = 0
    int b = 42
    int c = 0x1F
    int d = 0b1010
    int e = 1_000
    long g = 5L
    float h = 1.5f
    double i = 1.5
    double j = 1.5e10
    char l = 'x'
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (primitive_type)
        (identifier)
        (formal_parameters)
        (block
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (decimal_integer_literal)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (decimal_integer_literal)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (hex_integer_literal)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (binary_integer_literal)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (decimal_integer_literal)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (decimal_integer_literal)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (decimal_floating_point_literal)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (decimal_floating_point_literal)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (decimal_floating_point_literal)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (character_literal))))))))

==================
strings, escapes and a text block
==================

class C {
  void f() {
    String a = "plain"
    String b = ""
    String c = "tab\there and a backslash \\ and a quote \""
    String t = """
      line one
      line two
      """
    System.out.println(t)
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (primitive_type)
        (identifier)
        (formal_parameters)
        (block
          (local_variable_declaration
            (scoped_identifier
              (identifier))
            (variable_declarator
              (identifier)
              (string_literal)))
          (local_variable_declaration
            (scoped_identifier
              (identifier))
            (variable_declarator
              (identifier)
              (string_literal)))
          (local_variable_declaration
            (scoped_identifier
              (identifier))
            (variable_declarator
              (identifier)
              (string_literal)))
          (local_variable_declaration
            (scoped_identifier
              (identifier))
            (variable_declarator
              (identifier)
              (text_block)))
          (expression_statement
            (method_invocation
              (field_access
                (identifier)
                (identifier))
              (identifier)
              (argument_list
                (identifier)))))))))

==================
true, false and null
==================

class C {
  void f(Object o) {
    boolean t = true
    boolean u = false
    Object n = null
    if (o == null) {
      return
    }
  }
}

---

(source_file
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (primitive_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (scoped_identifier
              (identifier))
            (identifier)))
        (block
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (true)))
          (local_variable_declaration
            (primitive_type)
            (variable_declarator
              (identifier)
              (false)))
          (local_variable_declaration
            (scoped_identifier
              (identifier))
            (variable_declarator
              (identifier)
              (null_literal)))
          (if_statement
            (parenthesized_expression
              (binary_expression
                (identifier)
                (null_literal)))
            (block
              (return_statement))))))))
